ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: ping-pong
          image: eokarnas/dwk-ping-pong:1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-file
              mountPath: /app/files
